<resources>
    <string name="app_name">BioSint</string>

    <!--<string name="google_maps_key">AIzaSyD57uVtpaX6fa7PYBuCXEjlsAdIYIdvDyA</string>-->

    <string name="google_maps_key">AIzaSyDwP202Xl7sNJMLa4YvOgD8OpzVUpelkBk</string>


    <string name="forget_password">Forget Your Password? </string>
    <string name="click_here">Click Here</string>
    <string name="login">Login</string>
    <string name="login_account">Login Account</string>
    <string name="logout">Logout</string>
    <string name="dont_have">Dont have an account?</string>
    <string name="sign_up_accout">Sign Up Account Details</string>
    <string name="create_acc">Create Account</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="change_password">Change Password</string>
    <string name="submit">Submit</string>
    <string name="wrong_username">You have entered wrong username or password</string>

    <!--Manager Menu-->
    <string name="home">Home</string>
    <string name="add_users">Add Users</string>
    <string name="add_clients">Add Clients</string>
    <string name="manage_checkins">Manage Check-ins</string>
    <string name="manage_works">Manage Works</string>
    <string name="assign_clients">Assign Clients</string>
    <string name="settings">Settings</string>
    <string name="view_myemp_expense">View Expense</string>
    <string name="track_emp">Track Employee</string>

    <!--Expense-->

    <string name="download">Download</string>
    <string name="accpet">Accept</string>
    <string name="reject">Reject</string>
    <string name="delete">Delete</string>

    <!--Employee Menu-->
    <string name="emp_add_checkin">Add Check-in</string>
    <string name="emp_my_checkin">My Check-ins</string>
    <string name="emp_add_expense">Add Expense</string>
    <string name="emp_view_expense">View Expense</string>
    <string name="emp_attendance">Attendance</string>
    <string name="emp_view_attendance">View Attendance</string>
    <string name="emp_location">Location</string>
    <string name="emp_profile">Profile</string>
    <string name="share">Share</string>


    <!--Add Employee-->
    <string name="employee_email">Employee Email Address(Username)*</string>
    <string name="emp_password">Employee Password*</string>
    <string name="emp_name">Employee Name*</string>
    <string name="emp_actual_email">Employee Email*</string>
    <string name="emp_mobile">Employee Mobile*</string>
    <string name="emp_desi">Employee Designation*</string>
    <string name="shift_start">Shift Start Time*</string>
    <string name="shift_end">Shift End Time*</string>
    <string name="upload_photo">Upload Employee Photo*</string>
    <string name="emp_type">Employee Type</string>
    <string name="send_login">Send login credential to mobile</string>
    <string name="add_emp">Add Employee</string>
    <string name="add_checkin">Add Check-In</string>
    <string name="checkin_details">Please enter check-in related data in the form, the location will be auto populated via GPS but you can manually enter that for the photo use your camera to take a photo</string>
    <string name="purpose">Purpose</string>
    <string name="amount">Amount</string>
    <string name="add_expense">Add Expense</string>
    <string name="add_expense_details">Please enter your daily epense here. Name your expense like a ticket or something similar, also you can write down the details of your expense if you wish.</string>

    <!--Add Clients-->
    <string name="client_name">Client Name</string>
    <string name="client_desig">Designation</string>
    <string name="client_orga">Organiation</string>
    <string name="client_mobile">Mobile Number</string>
    <string name="client_email">Email</string>
    <string name="client_address">Address</string>
    <string name="client_website">Website Name</string>
    <string name="client_details">Details</string>
    <string name="client_status">Client Status</string>
    <string name="client_old">Old</string>
    <string name="client_new">New</string>
    <string name="add_client">Add Client</string>

    <!--Assign Clients-->
    <string name="title">Title</string>
    <string name="deadline">Title</string>
    <string name="select_emp">Select Employees</string>
    <string name="select_client">Select Client</string>
    <string name="priority">Set Priority</string>
    <string name="assign_client">Assign Client To Employee</string>
    <string name="view_report">View Report</string>

    <!--Payment Integration-->

    <string name="welcome_text">We are happy to see you... Please proceed to use application</string>
    <string name="user_Count">Number of users</string>
    <string name="Proceed_To_Pay">Proceed to Pay</string>
    <string name="payment_Error">Payment Error</string>

    <!--Attendance-->
    <string name="start_time">Start Time </string>
    <string name="end_time">End Time </string>


</resources>