<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/managerhome"
            android:title="@string/home" />
        <item
            android:id="@+id/addUsers"
            android:title="@string/add_users" />

        <item
            android:id="@+id/addClients"
            android:title="@string/add_clients" />

        <item
            android:id="@+id/assignClients"
            android:title="@string/assign_clients" />
        <item
            android:id="@+id/manageCheckins"
            android:title="@string/manage_checkins" />

        <item
            android:id="@+id/settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/viewMyEmpExpense"
            android:title="@string/view_myemp_expense" />
        <item
            android:id="@+id/logOut"
            android:title="@string/logout" />
    </group>


</menu>
