<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_shape"
    android:orientation="vertical"
    tools:context=".activity.LoginActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/loginAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/login_account"
            android:textColor="@color/white"
            android:textSize="@dimen/thirty_dp"

            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_login_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/loginAccount"
            android:layout_marginLeft="@dimen/ten_dp"
            android:layout_marginTop="@dimen/ten_dp"
            android:layout_marginRight="@dimen/ten_dp">

            <EditText
                android:id="@+id/login_mobile"
                android:layout_width="match_parent"
                android:layout_height="@dimen/fifty_dp"
                android:fontFamily="sans-serif-condensed"
                android:gravity="left"
                android:hint="Mobile Number"
                android:inputType="phone"
                android:maxLength="10"
                android:singleLine="true"
                android:theme="@style/EditTextHintColor" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/input_login_mobile"
            android:layout_marginLeft="@dimen/ten_dp"
            android:layout_marginTop="@dimen/five_dp"
            android:layout_marginRight="@dimen/ten_dp"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/fifty_dp"
                android:fontFamily="sans-serif-condensed"
                android:gravity="left"
                android:hint="Password"
                android:inputType="textPassword"
                android:maxLength="15"
                android:theme="@style/EditTextHintColor" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/input_login_password"
            android:layout_marginLeft="@dimen/five_dp"
            android:layout_marginRight="@dimen/five_dp"
            android:background="@drawable/background_shape_white"
            android:drawableRight="@drawable/ic_right_arrow"
            android:gravity="left|center"
            android:padding="@dimen/twenty_dp"
            android:layout_marginTop="@dimen/ten_dp"
            android:text="@string/login" />

        <TextView
            android:id="@+id/forgetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/loginBtn"
            android:layout_marginLeft="@dimen/ten_dp"
            android:layout_marginTop="@dimen/fifty_dp"
            android:layout_marginRight="@dimen/ten_dp"
            android:text="@string/forget_password"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/loginBtn"
            android:layout_marginTop="@dimen/fifty_dp"
            android:layout_toRightOf="@id/forgetPassword"
            android:text="@string/click_here" />


    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/thirty_dp"
        android:gravity="center"
        android:textColor="@color/white"
        android:text="@string/dont_have" />


</RelativeLayout>