<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".employeeactivity.Attendance_Activity">

    <TextView
        android:id="@+id/attendaceText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/twenty_dp"
        android:text="Login to start your day" />

    <com.skyfishjy.library.RippleBackground
        android:id="@+id/rippleEffect"
        android:layout_width="400dp"
        android:layout_height="400dp"
        android:layout_below="@id/attendaceText"
        android:layout_margin="@dimen/twenty_dp"
        app:rb_color="@color/red"
        app:rb_radius="40dp"
        app:rb_rippleAmount="6"
        app:rb_scale="6">


        <Button
            android:id="@+id/btnLogin"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_centerInParent="true"
            android:background="@drawable/round_shapre"
            android:text="@string/login" />
    </com.skyfishjy.library.RippleBackground>

    <TextView
        android:id="@+id/startText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_time"
        android:layout_below="@id/rippleEffect"
        android:layout_margin="@dimen/five_dp"
        android:layout_alignParentLeft="true"
        />


    <TextView
        android:id="@+id/shiftStartDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="20-11-2020"
        android:layout_below="@id/startText"
        android:layout_alignParentLeft="true"
        android:layout_margin="@dimen/five_dp"
        />
    <TextView
        android:id="@+id/shiftEndTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="11:30"
        android:layout_below="@id/shiftStartDate"
        android:layout_alignParentRight="true"
        android:layout_margin="@dimen/five_dp"
        />

    <TextView
        android:id="@+id/endTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/end_time"
        android:layout_below="@id/rippleEffect"
        android:layout_margin="@dimen/five_dp"
        android:layout_alignParentRight="true"
        />


    <TextView
        android:id="@+id/shiftEndDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="20-11-2020"
        android:layout_below="@id/startText"
        android:layout_alignParentRight="true"
        android:layout_margin="@dimen/five_dp"
        />
    <TextView
        android:id="@+id/shiftStartTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="11:30"
        android:layout_below="@id/shiftStartDate"
        android:layout_alignParentLeft="true"
        android:layout_margin="@dimen/five_dp"
        />


    <TextView
        android:id="@+id/shiftStartAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/client_address"
        android:layout_below="@id/shiftStartTime"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/ten_dp"
        android:visibility="gone"
        />



</RelativeLayout>